MP-138: Tests of responsefilter/refactoring